--- a/estilos/style.css
+++ b/estilos/style.css
@@ -10,7 +10,7 @@
 body, html {
     background-color: rgb(179, 67, 179);
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
 }
 
 main {
@@ -31,6 +31,9 @@ section#login {
     height: 500px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.609);
+
+    transition: width .2s, height .3s;
+    transition-timing-function: ease;
 } 
 
 section#login > div#imagem {
