--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -37,20 +37,27 @@ Grandes Telas: acima de 1200px
     body{
         background-image: linear-gradient(to bottom, rgb(37, 244, 234), rgb(115, 163, 200));
     }
-    
+
     section#login{
         width: 950px;
     }
 
     section#login > div#imagem {
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
-        
     }
+
+    div#formulario > h1{
+        font-size: 2em;
+    }
+
+    div#formulario > p {
+        font-size: 1.2em;
+    };
 }
