--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -30,6 +30,19 @@ Grandes Telas: acima de 1200px
         float: right;
         width: 70%;
     }
+
+    form > input[type="submit"] {
+        display: block;
+        font-size: 1em;
+        width: 100%;
+        height: 35px;
+        background-color: rgb(0, 174, 174);
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+
 }
 
 @media screen and (min-width: 992px){
@@ -59,5 +72,17 @@ Grandes Telas: acima de 1200px
 
     div#formulario > p {
         font-size: 1.2em;
-    };
+    }
+
+    form > input[type="submit"] {
+        display: block;
+        font-size: 1em;
+        width: 100%;
+        height: 35px;
+        background-color: rgb(0, 174, 174);
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+    }
 }
