--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,7 @@ section#login {
 
     background-color: white;
     width: 300px;
-    height: 500px;
+    height: 495px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.609);
 
@@ -56,5 +56,57 @@ div#formulario > h1 {
 }
 
 div#formulario > p {
+    font-size: 0.8em;
+}
+
+form > div.campo {
+    background-color: rgb(148, 0, 148);
+    display: block;
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+div.campo > label {
+    display: none;
+}
+
+form > input[type="submit"] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: rgb(0, 174, 174);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > input[type=submit]:hover {
+    background-color:rgb(0, 84, 84);
+}
+
+form > a.botao {
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 35px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color: rgb(0, 90, 180);
+    border: 1px solid;
+    border-radius: 5px;
+    text-decoration: none;
+}
+
+form > a.botao:hover {
+    background-color: rgb(0, 238, 238);
+}
+
+form > a.botao > i {
     font-size: 0.8em;
 }
